{{$NEXT}}

0.5.15  2021-02-24T09:45:59+13:00
    - Exported disused and bit rotted etc/libxml2-api.xml, etc/LibXML and
      etc/generator.raku to https://github.com/libxml-raku/LibXML-Raw-Gen-raku
      #51
    - Fix for dependency on latest XML #52. Replace references to
      <XML::Grammar::pident>, which (rightfully) no longer exists, with
      <XML::Grammar::name>. Detect namespaces after parsing.

0.5.14 2020-12-27
    - Fix circa Rakudo 2019.11 04node.t regression #50
0.5.13 2020-12-23
    - Fix return type of xmlSAXLocation getPublicId and getSystemId methods
    - Fix LibXML::SAX::Builder entityDecl() method
    - Add LibXML::SAX::Handler:SAX2 base methods for externalSubset(),
      internalSubSet(), processingInstruction(), cdataBlock(),
      elementDecl(), entityDecl(), notationDecl(), reference(),
      comment(), unparsedEntityDecl(), and attributeDecl()
    - Die if any of the remaining unimplemented callbacks are invoked:
      getParameterEntity(), hasExternalSubset(), hasInternalSubset(),
      ignorableWhitespace()
    - More performance improvements
0.5.12 2020-12-19
    - Various performance improvments #49
0.5.11 2020-11-18
    - Fix breakage on Rakudo 2020.10+ blead #48
    - Add native xml6_config:: module
0.5.10 2020-10-16
    - Add LibXML::Dict see() and seen() methods.
    - Fix compiler warnings in dom.c
    - Fix childNode() regression #47 (unbreak Spreadsheet::XLSX)
0.5.9 2020-08-17
    - Add $node.isBlank() method; mapped to raw xmlIsBlankNode() method.
    - Fix LibXML::DocumentFragment parse() error handling to return structured
      X::LibXML::Parser exceptions; similar to LibXML::Parser.
0.5.8 2020-08-07
    - Add :%ns option to node find(), find-nodes(), find-value(), exists(),
      xpath-context(), and xpath context new() method.
0.5.7 2020-08-06
    - Indicate position of parsing errors (Perl port) #15
    - Hide reader op() methods from backtrace
    - Make it illegal to move a DTD owned by one document into another.