@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Fix attribute isId() method to return Bool, as documented.
 
 0.5.15  2021-02-24T09:45:59+13:00
     - Exported disused and bit rotted etc/libxml2-api.xml, etc/LibXML and
